# oop2_project-master

./: CMakeLists.txt  README-Sheled.docx
include/: AssetLoader.h  AudioManager.h  BackgroundSystem.h  Board.h  BoostState.h  Button.h  Coin.h  CoinFormation.h  CollisionManager.h  Controller.h  DeadState.h  Exhaust.h  GameException.h  GameObjectFactory.h  GameOverScreen.h  GamePlayScreen.h  GameSession.h  HUD.h  HighScoreScreen.h  InputHandler.h  JumpState.h  Laser.h  LaserRotatingState.h  LaserState.h  LaserStaticState.h  LevelGenerator.h  MenuScreen.h  Missile.h  MovingGameObject.h  Object.h  ObjectCleaner.h  Player.h  PlayerState.h  PowerUpBox.h  Resources.h  RulesScreen.h  Scientist.h  Screen.h  SpeedItem.h  SpriteAnimator.h  (+3 more)
resources/: CMakeLists.txt  Score board.txt  help.pptx
src/: AssetLoader.cpp  AudioManager.cpp  BackgroundSystem.cpp  Board.cpp  BoostState.cpp  Button.cpp  CMakeLists.txt  Coin.cpp  CoinFormation.cpp  CollisionManager.cpp  Controller.cpp  DeadState.cpp  Exhaust.cpp  GameOverScreen.cpp  GamePlayScreen.cpp  GameSession.cpp  HUD.cpp  HighScoreScreen.cpp  InputHandler.cpp  JumpState.cpp  Laser.cpp  LaserRotatingState.cpp  LevelGenerator.cpp  MenuScreen.cpp  Missile.cpp  MovingGameObject.cpp  Object.cpp  ObjectCleaner.cpp  Player.cpp  PlayerState.cpp  PowerUpBox.cpp  Resources.cpp  RulesScreen.cpp  Scientist.cpp  SpeedItem.cpp  SpriteAnimator.cpp  StaticGameObject.cpp  SuperPowerRunnerState.cpp  WalkState.cpp  main.cpp
